# safeai-lite

./: .gitignore  CLAUDE.md  README.md  SafeAI-Lite需求文档.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: batch.rs  desensitize.rs  entity.rs  file.rs  mod.rs  restore.rs  session.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: batch.rs  entity.rs  mapping.rs  mod.rs  session.rs
src-tauri/src/services/: batch_service.rs  desensitize_service.rs  entity_service.rs  export_service.rs  file_service.rs  mod.rs  ner_service.rs  restore_service.rs  session_service.rs
src-tauri/src/utils/: markdown.rs  mod.rs
src/components/: Sidebar.tsx
src/components/ExportButton/: index.tsx
src/components/FileUpload/: index.tsx
src/components/FolderScanModal/: index.tsx
src/components/MappingTable/: index.tsx
src/components/SessionList/: index.tsx
src/pages/BatchDesensitize/: index.tsx
src/pages/Desensitize/: index.tsx
src/pages/EntityConfig/: CustomEntities.tsx  EntityForm.tsx  index.tsx
src/pages/IntentDesensitize/: index.tsx
src/pages/ProxySettings/: index.tsx
src/services/: api.ts  batchApi.ts  desensitizeApi.ts  entityApi.ts  fileApi.ts  sessionApi.ts
src/stores/: batchStore.ts  entityStore.ts  sessionStore.ts
src/styles/: global.css
src/types/: batch.ts  entity.ts  file.ts  session.ts
